# muse

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: pages.yml  windows.yml
public/: manifest.webmanifest  sw.js
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
