[package]
name = "muse-writing-app"
version = "0.3.0"
description = "A calm, local-first writing space"
authors = ["Muse"]
edition = "2021"

[lib]
name = "muse_writing_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = [] }
